@@ -13,6 +13,7 @@ Bugs fixed:
 - 2871055 Creation of IndicationHandlerCIMXML fails if missing prop
 - 2871935 indCIMXMLHandler provider can crash on invalid destination
 - 2864610 Subclasses not enum'd
+- 2878175 sfcbrepos should pass all backend options to sfcbmof
 
 Changes in 1.3.5
 ================
